Aldwych Website edits

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-siteTitle="Aldwych Network Home"
+siteTitle="Aldwych Network Home: A Fast & Reliable Ethereum Side-Chain"
 linkPrefix = ""
 theme="red"
 themeSecondary="violet"
